release 1.1.2-ea (2009-09)
- Support the throwing of WebApplicationException from within a singleton
  or stateless session bean method. This will only work with GF v3 build 58
  or greater.
- Fixed issue 302
  https://jersey.dev.java.net/issues/show_bug.cgi?id=302
  Allow a relative template name to be resolved to an absolute template name
  that is a flat name if the template cannot be resolved the path-based
  rule.
  The flat name is fully qualified class name plus a "." plus the template name.
  For example, given the resolving class com.foo.MyResource and the template
  name index the absolute name will be "com.foo.MyResource.index.jsp".
- Fixed issue 161
  https://jersey.dev.java.net/issues/show_bug.cgi?id=161
  The Jersey client can now be used completely independently of the Jersey
  server side when errors are produces by certain message body readers and
  writers.
  Response and Response.ResponseBuilder are now implemented such that they
  can be used on the client side (without having to include jersey server
  dependencies). This is important for some message body readers and writers
  that may throw WebApplicationException, which in turn defers to Response
  for building a response.
- Fixed issue 337
  https://jersey.dev.java.net/issues/show_bug.cgi?id=337
  The LW HTTP container logs an IOException (passed from Jersey) and attempts
  to set the status code to 500. If the statuss and headers are already
  committed it is not possible to set the status code and the response will be
  terminated prematurely.
- Fixed issue 276
  https://jersey.dev.java.net/issues/show_bug.cgi?id=276
  Ensure that localized messages are correctly resolved in Web containers.
- Ensure that ContainerResponseWriter.finish is called consistently, for example
  when no response entity is present.
- Cleaned up declaration of checked exceptions from the abstract message body
  reader/writer classes for JAXB and removed the declaration of IOException.
- Fixed issue 334